\name{NEWS}
\title{News for Package \pkg{WRS2}}
\encoding{UTF-8}

\section{Changes in Version 1.1-0}{
  \itemize{
    \item Bootstrap CI for effect size in t1way() added.
    \item Bootstrap CI for akp.effect() added.
    \item alpha argument in lincon() and rmmcp() added. 
    \item Bootstrap CI for pbcor() and wincor() added.
    \item dep.effect() function added for effect size computations (incl. CI) in paired samples settings. 
    \item Seed issue in t1waybt() fixed. 
    \item Labeling in in sppba, sppbi, and sppbb fixed. 
    } 
}


\section{Changes in Version 1.0-0}{
  \itemize{
    \item Vignette updated.
    \item Effect size added to yuen(). 
    \item Hochberg p-value correction added to lincon(). 
    \item Alpha level argument added in onesampb().
    } 
}

\section{Changes in Version 0.10-0}{
  \itemize{
    \item Vignette added.
    } 
}


\section{Changes in Version 0.9-7}{
  \itemize{
    \item \code{onesampb} added.
    \item \code{bwtrim} now reports dfs. 
    \item \code{winvar}, \code{onestep}, \code{mom} exported.
    \item diet dataset added. 
    } 
}

\section{Changes in Version 0.9-5}{
  \itemize{
    \item \code{med2way} now reports df.
    } 
}

\section{Changes in Version 0.9-4}{
  \itemize{
    \item Label bugfix in \code{lincon}.
    } 
}

\section{Changes in Version 0.9-3}{
  \itemize{
    \item Reports error in \code{t1way} if Winsorized variance becomes 0. 
    } 
}

\section{Changes in Version 0.9-2}{
  \itemize{
    \item Warnings in vignette removed.
    \item Bug in \code{med2way} fixed.
    } 
}
\section{Changes in Version 0.9-1}{
  \itemize{
    \item Vignette updated.
    } 
}
\section{Changes in Version 0.9-0}{
  \itemize{
    \item \code{Qanova} now allows for a vector of quantiles and applies multiple testing adjustment. 
    \item \code{t3way} stops when design is incomplete. 
    \item \code{ZYmediate} added for robust mediation test.
    \item \code{essays} data added. 
    } 
}
\section{Changes in Version 0.8-0}{