@@ -1,8 +1,8 @@
 Package: WRS2
 Type: Package
 Title: A Collection of Robust Statistical Methods
-Version: 1.1-0
-Date: 2020-06-16
+Version: 1.1-1
+Date: 2021-02-05
 Authors@R: c(person(given="Patrick", family="Mair", email="mair@fas.harvard.edu", role=c("cre","aut")),
              person(given="Rand", family="Wilcox", email="rwilcox@usc.edu", role=c("aut")))
 Description: A collection of robust statistical methods based on Wilcox' WRS functions. It implements robust t-tests (independent and dependent samples), robust ANOVA (including between-within subject designs), quantile ANOVA, robust correlation, robust mediation, and nonparametric ANCOVA models based on robust location measures.
